--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -44,9 +44,9 @@ pipeline {
                         }
             }
         }
+            agent {label 'mesos'}
         stage("Prepare aurora cluster") {
             when { expression { return params.MB | params.LLC} }
-            agent {label 'mesos'}
             steps {
                 sh'''
                 mkdir -p ${HOME}/.aurora
@@ -54,20 +54,21 @@ pipeline {
                 '''
             }
         }
-
-        stage("Run LLC Metrics Collection") {
-            failFast true
-            parallel {
-                stage("Run LLC Metrics Collection | Mesos") {
+        stage("Mesos") {
+            agent {label 'mesos'}
+            environment {
+                MESOS_MASTER_HOST = "${MESOS}"
+                MESOS_EXPECTED_TASKS = -1
+                INVENTORY='prm/demo_scenarios/common/inventory-mesos.yaml'
+                MIN_RECALL = -1
+                MIN_PRECISION = -1
+                LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
+            }
+            stage("Run LLC Metrics Collection | Mesos") {
                     when { expression { return params.BUILD_LLC_MODEL } }
-                    agent {label 'mesos'}
                     environment {
-                        MESOS_MASTER_HOST = "${MESOS}"
-                        MESOS_EXPECTED_TASKS = -1
-                        INVENTORY='prm/demo_scenarios/common/inventory-mesos.yaml'
+                        INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
                         BUILD_SCENARIO = "llc"
-                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                        LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
                     }
                     steps {
                         llc_metrics_collection()
@@ -77,128 +78,89 @@ pipeline {
                             clean("LLC", "llc_results.csv")
                         }
                     }
+            }
+            stage("Run LLC experiment | Mesos") {
+                when { expression { return params.LLC } }
+                environment {
+                    BUILD_SCENARIO = "llc"
+                    SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
                 }
-                stage("Run LLC Metrics Collection | Kubernetes") {
-                    when { expression { return params.BUILD_LLC_MODEL } }
-                    agent {label 'kubernetes'}
-                    environment {
-                        KUBERNETES_HOST = "${KUBERNETES}"
-                        KUBERNETES_EXPECTED_TASKS = -1
-                        INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
-                        BUILD_SCENARIO = "llc"
-                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                        CRT_PATH = "/etc/kubernetes/ssl"
-                        LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
+                steps {
+                    llc_experiment()
+                }
+                post {
+                    always {
+                        clean("LLC", "llc_results.csv")
                     }
-                    steps {
-                        llc_metrics_collection()
-                    }
-                    post {
-                        always {
-                            clean("LLC", "llc_results.csv")
-                        }
+                }
+            }
+            stage("Run Memory Bandwidth experiment | Mesos") {
+                when { expression { return params.MB } }
+                environment {
+                    BUILD_SCENARIO = "mbw"
+                    SCENARIO_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
+                }
+                steps {
+                    memory_bandwidth_experiment()
+                }
+                post {
+                    always {
+                        clean("MBW", "mbw_results.csv")
                     }
                 }
             }
         }
-
-        stage("Run LLC experiment") {
-            failFast true
-            parallel {
-                stage("Run LLC experiment | Mesos") {
-                    when { expression { return params.LLC } }
-                    agent {label 'mesos'}
-                    environment {
-                        MESOS_MASTER_HOST = "${MESOS}"
-                        MESOS_EXPECTED_TASKS = -1
-                        INVENTORY='prm/demo_scenarios/common/inventory-mesos.yaml'
-                        MIN_RECALL = -1
-                        MIN_PRECISION = -1
-                        BUILD_SCENARIO = "llc"
-                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                        LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
-                    }
-                    steps {
-                        llc_experiment()
-                    }
-                    post {
-                        always {
-                            clean("LLC", "llc_results.csv")
-                        }
-                    }
+        stage("Kubernetes") {
+            agent {label 'kubernetes'}
+            environment {
+                KUBERNETES_HOST = "${KUBERNETES}"
+                KUBERNETES_EXPECTED_TASKS = -1
+                INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
+                CRT_PATH = "/etc/kubernetes/ssl"
+                LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
+            }
+            stage("Run LLC Metrics Collection | Kubernetes") {
+                when { expression { return params.BUILD_LLC_MODEL } }
+                environment {
+                    BUILD_SCENARIO = "llc"
+                    SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
                 }
-                stage("Run LLC experiment | Kubernetes") {
-                    when { expression { return params.LLC } }
-                    agent {label 'kubernetes'}
-                    environment {
-                        KUBERNETES_HOST = "${KUBERNETES}"
-                        KUBERNETES_EXPECTED_TASKS = -1
-                        INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
-                        MIN_RECALL = -1
-                        MIN_PRECISION = -1
-                        BUILD_SCENARIO = "llc"
-                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                        CRT_PATH = "/etc/kubernetes/ssl"
-                        LABELS="""additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
-                    }
-                    steps {
-                        llc_experiment()
-                    }
-                    post {
-                        always {
-                            clean("LLC", "llc_results.csv")
-                        }
+                steps {
+                    llc_metrics_collection()
+                }
+                post {
+                    always {
+                        clean("LLC", "llc_results.csv")
                     }
                 }
             }
-        }
-
-        stage("Run Memory Bandwidth experiment") {
-            failFast true
-            parallel {
-                stage("Run Memory Bandwidth experiment | Mesos") {
-                    when { expression { return params.MB } }
-                    agent {label 'mesos'}
-                    environment {
-                        MESOS_MASTER_HOST = "${MESOS}"
-                        MESOS_EXPECTED_TASKS = -1
-                        INVENTORY='prm/demo_scenarios/common/inventory-mesos.yaml'
-                        MIN_RECALL = -1
-                        MIN_PRECISION = -1
-                        BUILD_SCENARIO = "llc"
-                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                        LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
-                    }
-                    steps {
-                        memory_bandwidth_experiment()
-                    }
-                    post {
-                        always {
-                            clean("MBW", "mbw_results.csv")
-                        }
+            stage("Run LLC experiment | Kubernetes") {
+                when { expression { return params.LLC } }
+                environment {
+                    BUILD_SCENARIO = "llc"
+                    SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
+                }
+                steps {
+                    llc_experiment()
+                }
+                post {
+                    always {
+                        clean("LLC", "llc_results.csv")
                     }
                 }
-                stage("Run Memory Bandwidth experiment | Kubernetes") {
-                    when { expression { return params.MB } }
-                    agent {label 'kubernetes'}
-                    environment {
-                        KUBERNETES_HOST = "${KUBERNETES}"
-                        KUBERNETES_EXPECTED_TASKS = -1
-                        INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
-                        MIN_RECALL = -1
-                        MIN_PRECISION = -1
-                        BUILD_SCENARIO = "mbw"
-                        SCENARIO_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
-                        CRT_PATH = "/etc/kubernetes/ssl"
-                        LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
-                    }
-                    steps {
-                        memory_bandwidth_experiment()
-                    }
-                    post {
-                        always {
-                            clean("MBW", "mbw_results.csv")
-                        }
+            }
+            stage("Run Memory Bandwidth experiment | Kubernetes") {
+                when { expression { return params.MB } }
+                environment {
+                    BUILD_SCENARIO = "mbw"
+                    SCENARIO_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
+                }
+                steps {
+                    memory_bandwidth_experiment()
+                }
+                post {
+                    always {
+                        clean("MBW", "mbw_results.csv")
                     }
                 }
             }
