--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -44,9 +44,9 @@ pipeline {
                         }
             }
         }
-            agent {label 'mesos'}
         stage("Prepare aurora cluster") {
             when { expression { return params.MB | params.LLC} }
+            agent {label 'mesos'}
             steps {
                 sh'''
                 mkdir -p ${HOME}/.aurora
@@ -55,6 +55,7 @@ pipeline {
             }
         }
         stage("Mesos") {
+            agent {label 'mesos'}
             environment {
                 MESOS_MASTER_HOST = "${MESOS}"
                 MESOS_EXPECTED_TASKS = -1
@@ -66,9 +67,8 @@ pipeline {
             steps {
                 stage("Run LLC Metrics Collection | Mesos") {
                         when { expression { return params.BUILD_LLC_MODEL } }
-                        agent {label 'mesos'}
                         environment {
-                            INVENTORY='prm/demo_scenarios/common/inventory-kubernetes.yaml'
+                            SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
                             BUILD_SCENARIO = "llc"
                         }
                         steps {
@@ -82,7 +82,6 @@ pipeline {
                 }
                 stage("Run LLC experiment | Mesos") {
                     when { expression { return params.LLC } }
-                    agent {label 'mesos'}
                     environment {
                         BUILD_SCENARIO = "llc"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
@@ -98,7 +97,6 @@ pipeline {
                 }
                 stage("Run Memory Bandwidth experiment | Mesos") {
                     when { expression { return params.MB } }
-                    agent {label 'mesos'}
                     environment {
                         BUILD_SCENARIO = "mbw"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
@@ -115,6 +113,7 @@ pipeline {
             }
         }
         stage("Kubernetes") {
+            agent {label 'kubernetes'}
             environment {
                 KUBERNETES_HOST = "${KUBERNETES}"
                 KUBERNETES_EXPECTED_TASKS = -1
@@ -125,7 +124,6 @@ pipeline {
             steps {
                 stage("Run LLC Metrics Collection | Kubernetes") {
                     when { expression { return params.BUILD_LLC_MODEL } }
-                    agent {label 'kubernetes'}
                     environment {
                         BUILD_SCENARIO = "llc"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
@@ -141,7 +139,6 @@ pipeline {
                 }
                 stage("Run LLC experiment | Kubernetes") {
                     when { expression { return params.LLC } }
-                    agent {label 'kubernetes'}
                     environment {
                         BUILD_SCENARIO = "llc"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
@@ -157,7 +154,6 @@ pipeline {
                 }
                 stage("Run Memory Bandwidth experiment | Kubernetes") {
                     when { expression { return params.MB } }
-                    agent {label 'kubernetes'}
                     environment {
                         BUILD_SCENARIO = "mbw"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
