--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -64,10 +64,10 @@ pipeline {
                 MIN_PRECISION = -1
                 LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
             }
-            steps {
+            stages {
                 stage("Run LLC Metrics Collection | Mesos") {
                         when { expression { return params.BUILD_LLC_MODEL } }
-                        script {
+                        environment {
                             SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
                             BUILD_SCENARIO = "llc"
                         }
@@ -82,7 +82,7 @@ pipeline {
                 }
                 stage("Run LLC experiment | Mesos") {
                     when { expression { return params.LLC } }
-                    script {
+                    environment {
                         BUILD_SCENARIO = "llc"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
                     }
@@ -97,7 +97,7 @@ pipeline {
                 }
                 stage("Run Memory Bandwidth experiment | Mesos") {
                     when { expression { return params.MB } }
-                    script {
+                    environment {
                         BUILD_SCENARIO = "mbw"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_mbw.0/inventory.yaml'
                     }
