--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -44,16 +44,6 @@ pipeline {
                         }
             }
         }
-        stage("Prepare aurora cluster") {
-            when { expression { return params.MB | params.LLC} }
-            agent {label 'mesos'}
-            steps {
-                sh'''
-                mkdir -p ${HOME}/.aurora
-                cp ${WORKSPACE}/prm/demo_scenarios/common/aurora-clusters.json  ${HOME}/.aurora/clusters.json
-                '''
-            }
-        }
         stage("Mesos") {
             agent {label 'mesos'}
             environment {
@@ -65,6 +55,15 @@ pipeline {
                 LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
             }
             stages {
+                stage("Prepare aurora cluster") {
+                    when { expression { return params.MB | params.LLC} }
+                    steps {
+                        sh'''
+                        mkdir -p ${HOME}/.aurora
+                        cp ${WORKSPACE}/prm/demo_scenarios/common/aurora-clusters.json  ${HOME}/.aurora/clusters.json
+                        '''
+                    }
+                }
                 stage("Run LLC Metrics Collection | Mesos") {
                         when { expression { return params.BUILD_LLC_MODEL } }
                         environment {
@@ -292,7 +291,7 @@ def memory_bandwidth_experiment() {
     reconfigure_wca()
     start_wca()
     echo 'Start baseline workloads.'
-    start_workloads("${EXTRA_ANSIBLE_PARAMS}", 'specjbb,tensorflow_benchmark_prediction,tensorflow_benchmark_train,cassandra_stress', "${MBW_BASELINE_SLEEP}")
+    start_workloads("${EXTRA_ANSIBLE_PARAMS}", 'specjbb,tensorflow_benchmark_train,cassandra_stress', "${MBW_BASELINE_SLEEP}")
     echo 'Start contender workload.'
     start_workloads("${EXTRA_ANSIBLE_PARAMS}", 'tensorflow_benchmark_prediction', "${MBW_CONTENDER_SLEEP}")
     calculate_precision()
