--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -117,7 +117,7 @@ pipeline {
                     }
                     post {
                         always {
-                            clean("MBW", "mbw_results.csv")
+                            clean()
                         }
                     }
                 }
@@ -146,7 +146,7 @@ pipeline {
                     }
                     post {
                         always {
-                            clean("LLC", "llc_results.csv")
+                            clean()
                         }
                     }
                 }
@@ -165,7 +165,7 @@ pipeline {
                     }
                     post {
                         always {
-                            clean("LLC", "llc_results.csv")
+                            clean()
                         }
                     }
                 }
