--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -24,8 +24,8 @@ pipeline {
     }
     parameters {
         booleanParam(name: 'BUILD_PEX', defaultValue: true, description: 'Build wca-pex')
-        booleanParam(name: 'LLC', defaultValue: true, description: 'Run LLC experiment')
         booleanParam(name: 'BUILD_LLC_MODEL', defaultValue: false, description: 'Build Model For LLC Contention')
+        booleanParam(name: 'LLC', defaultValue: true, description: 'Run LLC experiment')
         booleanParam(name: 'MB', defaultValue: false, description: 'Run MBW experiment')
     }
     stages {
@@ -68,10 +68,10 @@ pipeline {
                 stage("Run LLC Metrics Collection | Mesos") {
                         when { expression { return params.BUILD_LLC_MODEL } }
                         environment {
-                            SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
+                            SCENARIO_INVENTORY='prm/demo_scenarios/simple_llc.0/inventory.yaml'
                             BUILD_SCENARIO = "llc"
-                            MESOS_EXPECTED_TASKS = 3
-                            TAGS='twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra'
+                            MESOS_EXPECTED_TASKS = 1
+                            TAGS='twemcache_mutilate'
                             LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
                         }
                         steps {
@@ -88,9 +88,9 @@ pipeline {
                     environment {
                         BUILD_SCENARIO = "llc"
                         SCENARIO_INVENTORY='prm/demo_scenarios/complex_llc.0/inventory.yaml'
-                        MESOS_EXPECTED_TASKS = 3
-                        TAGS='twemcache_mutilate,redis_rpc_perf,cassandra_stress--cassandra'
-                        CONTENDER_TAGS='cassandra_stress--stress'
+                        MESOS_EXPECTED_TASKS = 2
+                        TAGS='twemcache_mutilate'
+                        CONTENDER_TAGS='stress_ng'
                         LABELS="""{additional_labels: {build_number: "${BUILD_NUMBER}", build_node_name: "${NODE_NAME}", build_commit: "${GIT_COMMIT}", build_scenario: "$BUILD_SCENARIO"}}"""
                     }
                     steps {
@@ -298,11 +298,11 @@ def llc_metrics_collection() {
 def llc_experiment() {
     reconfigure_wca()
     start_wca()
-    dir('prm/workload-collocation-agent/workloads') {
-        sh 'sed -i s/number_of_rows=100000$/number_of_rows=10000/g ./cassandra_stress/cassandra_stress.aurora'
-        sh 'sed -i s/40000/2000/g ./mutilate/mutilate.aurora'
-        sh 'sed -i s/-C\\ %d\\;/-C\\ %d\\ -R\\ 2000\\;/g ./mutilate/mutilate.aurora'
-    }
+//    dir('prm/workload-collocation-agent/workloads') {
+//        sh 'sed -i s/number_of_rows=100000$/number_of_rows=10000/g ./cassandra_stress/cassandra_stress.aurora'
+//        sh 'sed -i s/40000/2000/g ./mutilate/mutilate.aurora'
+//        sh 'sed -i s/-C\\ %d\\;/-C\\ %d\\ -R\\ 2000\\;/g ./mutilate/mutilate.aurora'
+//    }
     echo 'Start baseline workloads.'
 	start_workloads("${EXTRA_ANSIBLE_PARAMS}", "${TAGS}", "${LLC_BASELINE_SLEEP}")
 	echo 'Start contender workload.'
