Stress_ng inventory fix - continuation

--- a/prm/demo_scenarios/simple_llc.0/inventory.yaml
+++ b/prm/demo_scenarios/simple_llc.0/inventory.yaml
@@ -36,6 +36,7 @@ application_hosts:
           count: 1
           timeout: 60
           stressor: cache
+          slo: inf
           number_workers: 16
           resources:
             cpu: 16
