--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -298,11 +298,10 @@ def llc_metrics_collection() {
 def llc_experiment() {
     reconfigure_wca()
     start_wca()
-//    dir('prm/workload-collocation-agent/workloads') {
-//        sh 'sed -i s/number_of_rows=100000$/number_of_rows=10000/g ./cassandra_stress/cassandra_stress.aurora'
-//        sh 'sed -i s/40000/2000/g ./mutilate/mutilate.aurora'
-//        sh 'sed -i s/-C\\ %d\\;/-C\\ %d\\ -R\\ 2000\\;/g ./mutilate/mutilate.aurora'
-//    }
+    dir('prm/workload-collocation-agent/workloads') {
+        sh 'sed -i s/\\/mutilate\\/mutilate/taskset\\ --cpu-list\\ 0,2,4,6,8,10\\ \\/mutilate\\/mutilate/g mutilate.aurora'
+        sh 'sed -i s/do\\ stress-ng/do\\ taskset\\ --cpu-list\\ 12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54\\ stress-ng/g stress_ng.aurora'
+    }
     echo 'Start baseline workloads.'
 	start_workloads("${EXTRA_ANSIBLE_PARAMS}", "${TAGS}", "${LLC_BASELINE_SLEEP}")
 	echo 'Start contender workload.'
