--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -299,7 +299,7 @@ def llc_experiment() {
     reconfigure_wca()
     start_wca()
     dir('prm/workload-collocation-agent/workloads') {
-        sh 'sed -i "s/\\/mutilate\\/mutilate/taskset\\ --cpu-list\\ 0,2,4,6,8,10\\ \\/mutilate\\/mutilate/g" mutilate/mutilate.aurora'
+        sh 'sed -i "s/twemcache\\ --prealloc/taskset\\ --cpu-list\\ 0,2,4,6,8\\ twemcache\\ --prealloc/g" twemcache/twemcache.aurora'
         sh 'sed -i "s/do\\ stress-ng/do\\ taskset\\ --cpu-list\\ 12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54\\ stress-ng/g" stress_ng/stress_ng.aurora'
     }
     echo 'Start baseline workloads.'
