--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -240,6 +240,7 @@ def reconfigure_wca() {
     sh'''
     sudo mkdir -p /var/lib/wca/
     sudo mkdir -p /etc/wca
+    sudo mkdir -p ${WORKSPACE}/${BUILD_NUMBER}/
     sudo cp ${WORKSPACE}/prm/demo_scenarios/common/threshold.json "${WORKSPACE}/${BUILD_NUMBER}/Intel(R) Xeon(R) CPU E5-2660 v4 @ 2.00GHz"
     sudo cp ${WORKSPACE}/prm/demo_scenarios/common/workload.json /var/lib/wca/
     sudo cp ${WORKSPACE}/prm/demo_scenarios/common/wca_config.yml.tmp /etc/wca/wca_config.yml
