--- a/prm/Jenkinsfile
+++ b/prm/Jenkinsfile
@@ -197,7 +197,7 @@ def clean() {
     stop_workloads()
     sleep 5
     stop_wca()
-    sh "sudo rmdir ${WORKSPACE}/${BUILD_NUMBER}"
+    sh "sudo rmdir -rf ${WORKSPACE}/${BUILD_NUMBER}"
 }
 
 def plot_results(scenario, csv_file) {
