--- a/prm/demo_scenarios/simple_llc.0/inventory.yaml
+++ b/prm/demo_scenarios/simple_llc.0/inventory.yaml
@@ -16,6 +16,7 @@ application_hosts:
             env:
               worker_threads: 6
               max_memory: 4096
+              cpu_list: 0,2,4,6,8
             resources:
               cpu: 6
               ram: 50
@@ -38,6 +39,7 @@ application_hosts:
           stressor: "cache-level=3 --cache"
           slo: inf
           number_workers: 28
+          cpu_list: 12,14,16,18,20,22,24,26,28,30,32,34,36,38,40,42,44,46,48,50,52,54
           resources:
             cpu: 28
             ram: 50
